# cotar-rs

./: .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
cotar/: CHANGELOG.md  Cargo.toml
cotar-cli/: CHANGELOG.md  Cargo.toml
cotar-cli/src/: main.rs  mbtiles.rs  validate.rs
cotar/src/: cotar.rs  cotar_index.rs  dataview.rs  fnv1a.rs  lib.rs
src/: cotar.rs  dataview.rs  fnv1a.rs  lib.rs  main.rs
