[package]
name = "cotar-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cotar"
path = "src/main.rs"

[dependencies]
cotar = { path = "../cotar" }
clap = { version = "3.0.14", features = ["derive"] }
sha256 = { version = "1.0.3" }
rusqlite = { version = "0.26.3" }
tar = { version = "0.4.0" }
quadkey = { version = "0.1.0" }
